    * Issue 63: Use only one line for cookie logs in the Console panel (if enough horizontal space)
    * Issue 64: Firecookie table format breaks when switching to detatched window mode
    * Issue 65: "Secure" flag not being applied [cookie.toString() seems to drop it]
    * Issue 62: What does a red highlighted cookie mean?
    * Issue 70: Cookie actions are duplicated

== Enhancements ==
    * Remove all session cookies (issue 59). It's now possible to remove all session
      cookies (displayed in the Cookies panel) only.
      See Cookies -> Remove Session Cookies menu action.
      This new action also uses a confirmation dialog (that allows to check "Do not show this
      message again".) Similarly to the one used for "Remove Cookies".
      These dialogs are independent to each other.

== Localization ==
    * All strings are now localized using firecookie.properties file. There are no DTD strings
      any more. DTD strings are not scriptable, which makes hard to use them in dynamic env.
      Also missing DTD string causes a fatal error when loading the extension.

Release Notes for Firecookie 1.0
--------------------------------
Firefox 2.0 - 3.7a1pre

== Enhancements ==
    * Break on Cookie. This feature allows to break JS execution when a cookie
      is modified, added or removed (issue 50).
    * Conditional Cookie breakpoints.

== Localization ==
    * ko-KR localization - contribution by Sewon Kim

== Bug Fixes ==
    Issue 50: Break on cookie change
    Issue 1996 (From FB List): Cookies are displayed in console even if disabled when 'Log Daten in Konsole anzeigen' was checked when activated
    Issue 52: Enhance "Remove Cookies" Functionality
    Issue 53: Add Option to Clear Cookie Value (Not Delete Cookie Entirely) to Cookies Panel Right-Click Menu
    Issue 56: FireCookie spamming the Firebug Console even when disabled for a page

Release Notes for Firecookie 0.9.1
----------------------------------

== Enhancements ==